...
  @override
  Widget build(BuildContext context) {
    final args = ModalRoute.of(context)!.settings.arguments as ScreenArguments;
    BlocProvider.of<MovieDetailsBloc>(context).add(GetMovieByIdEvent(movieId: args.data));
    return Scaffold(
      appBar: AppBar(
        title: Text(args.title,key: const Key("details_screen")),
          foregroundColor: Colors.black87
      ),
      body: BlocBuilder<MovieDetailsBloc, MovieDetailsState>(
        builder: (context, state) {
          if (state is MovieDetailsLoading) {
            return const Center(child: CupertinoActivityIndicator());
...
